unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/Overtime_and_Attendance_Tracking__c.object-meta.xml
<CustomObject>
    <label>Overtime and Attendance Tracking</label>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>Overtime and Attendance Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overtime and Attendance Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>