unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Employee__c.field-meta.xml
<CustomField>
    <fullName>pro_Employee__c</fullName>
    <description>AB 14/11/2023 - Prodigy</description>
    <label>Employee</label>
    <referenceTo>GlicW__Resource__c</referenceTo>
    <relationshipLabel>Overtime and Attendance Tracking</relationshipLabel>
    <relationshipName>Overtime_and_Attendance_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>