unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Hours_Late__c.field-meta.xml
<CustomField>
    <fullName>pro_Hours_Late__c</fullName>
    <label>Hours Late</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>