unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Late_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Late_Arrival_Date__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Late Arrival Date</label>
    <type>Date</type>
</CustomField>