unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Late_Arrival_Reason__c.field-meta.xml
<CustomField>
    <fullName>pro_Late_Arrival_Reason__c</fullName>
    <description>15/11/2023 - Prodigy</description>
    <label>Late Arrival Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>