unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Overtime_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Overtime_Date__c</fullName>
    <description>AB 14/11/2023 - Prodigy</description>
    <label>Overtime Date</label>
    <type>Date</type>
</CustomField>