unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>pro_Overtime_Hours__c</fullName>
    <description>AB 14/11/2023 - Prodigy</description>
    <label>Overtime Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>