unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Overtime_Reason__c.field-meta.xml
<CustomField>
    <fullName>pro_Overtime_Reason__c</fullName>
    <description>AB 14/11/2023 - prodigy</description>
    <label>Overtime Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>