unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/fields/pro_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Type__c</fullName>
    <description>AB 14/11/2023 - prodigy</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>