unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/recordTypes/Attendance.recordType-meta.xml
<RecordType>
    <fullName>Attendance</fullName>
    <active>true</active>
    <label>Attendance</label>
</RecordType>