unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/recordTypes/pro_Overtime.recordType-meta.xml
<RecordType>
    <fullName>pro_Overtime</fullName>
    <active>true</active>
    <label>Overtime</label>
</RecordType>