unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/validationRules/Overtime_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Overtime_Selected</fullName>
    <active>true</active>
    <description>AB 15/11/2023 - Created by Prodigy</description>
    <errorConditionFormula>AND(
IF(TEXT(pro_Type__c) = &#39;Overtime&#39;, TRUE, FALSE),
OR(
ISBLANK( pro_Overtime_Date__c ),
ISBLANK( pro_Overtime_Hours__c ),
ISBLANK( pro_Overtime_Reason__c ))
)</errorConditionFormula>
    <errorMessage>Please note if the type is &#39;Overtime&#39; then the following fields need to be populated. &#39;Overtime Date&#39;, &#39;Overtime Hours&#39; and &#39;Overtime Reason&#39;</errorMessage>
</ValidationRule>