unpackaged/main/default/objects/Overtime_and_Attendance_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Employee__c</columns>
    <columns>pro_Type__c</columns>
    <columns>pro_Overtime_Date__c</columns>
    <columns>pro_Overtime_Hours__c</columns>
    <columns>pro_Overtime_Reason__c</columns>
    <columns>pro_Late_Arrival_Date__c</columns>
    <columns>pro_Hours_Late__c</columns>
    <columns>pro_Late_Arrival_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>